--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 .header {
 background-color: blueviolet;
 }
-.navigation {background-color: rgb(235, 193, 10);
-width: 250px;
-
+.navigation {background-color: rgba(82, 146, 21, 0.822);
+width: 600px;
+text-align: center ;
+display: block;
+margin-left: 800px;
+}
+.navigation-item {
+display: inline-block;
+/* margin-right: 150px; */
+padding: 30px;
+margin: 15px;
+text-transform : uppercase;
+}
+.navigation-item__link {
+text-decoration: none;
 }
